--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -1,9 +1,14 @@
 .headerContainer{
     width:100%;
     height:50px;
-    position:absolute;
+    position:relative;
     display:flex;
     justify-content: space-around;
     align-items: center;
 }
-
+.headerContainer img{
+    cursor:pointer
+}
+.headerList{
+    cursor:pointer
+}
