--- a/src/page/compare page/cmp.css
+++ b/src/page/compare page/cmp.css
@@ -1,9 +1,43 @@
 .cmpCardContainer{
     width:100%;
+    margin-top:10%
+}
+.twoCard{
     display:flex;
     justify-content: space-around;
 }
 .cmpCard{
     width:30%;
-    border:1px solid
+}
+.cmpCard select{
+    width:100%;
+    margin-bottom:5%;
+    height:40px;
+    background-color:#2C3E50 ;
+    color:white;
+    padding-left: 5%;
+}
+.cmpCardChild{
+    width:100%
+}
+.cmpBtn{
+    display:flex;
+    justify-content:space-around ;
+    width:100%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.cmpBtn button{
+    width:45%;
+    height:40px;
+    background-color: #007CC7;
+    color:white
+}
+.better{
+    width:30%;
+    margin-left:35%;
+    margin-bottom: 5%;
+}
+.better h2{
+    margin-bottom:3%
 }
