--- a/src/page/newCars/newCars.css
+++ b/src/page/newCars/newCars.css
@@ -23,3 +23,11 @@
     padding-left:6%;
     color:white
 }
+.newHeaderh1{
+    margin-left: 5%;
+    padding-bottom:3%;
+    padding-top:3%
+}
+.newHeaderh1 h1{
+    margin-bottom:1%
+}
