--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@ body{
     color:white;
     margin:0;
     box-sizing: border-box;
-    padding:0
+    padding:0;
+    
 }
 button{
     cursor:pointer
