--- a/src/component/card/card.css
+++ b/src/component/card/card.css
@@ -7,13 +7,16 @@
 .card{
     border: 2px solid #12232E;
     width:30%;
+    text-decoration:none;
+    color:white
 }
 .card img{
     width:90%;
     padding:5%
 }
 .card h2{
-    padding-left:5%
+    padding-left:5%;
+    height:60px
 }
 .card p{
     padding-left:5%
