--- a/src/component/card/cmpCard.css
+++ b/src/component/card/cmpCard.css
@@ -7,6 +7,8 @@
 .cardCmp{
     border: 2px solid #12232E;
     width:100%;
+    color:white;
+    text-decoration:none
 }
 .cardCmp img{
     width:90%;
