--- a/src/component/homepage component/table/table.css
+++ b/src/component/homepage component/table/table.css
@@ -42,8 +42,25 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    gap:5px
+    gap:5px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
+.listLine.active {
+    background-color: #007CC7; /* Màu nền khi được chọn */
+    color: #ffffff; 
+    width:15%;
+  }
+  
+  .listLine:not(.active) {
+    background-color: transparent;
+    color: #007CC7;
+  }
+  
+  .listLine:hover {
+    background-color: #005fa3; /* Màu nền khi hover */
+    color: #ffffff;
+  }
 .underline{
     height:2px;
     background-color: #007CC7;
@@ -87,7 +104,4 @@
     position:relative;
     left:3%;
     width:30%
-}
-.active{
-    border:1px solid white
 }
